dress image added in create api TAPP-97
