# app/Models/Cloth.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Cloth extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'title',
+        'dress_image_id',
+        'length',
+        'provided_by',
+        'price'
+    ];
+}
